--- a/Idea-war/web/resources/css/jsfcrud.css
+++ b/Idea-war/web/resources/css/jsfcrud.css
@@ -80,3 +80,65 @@ tr.jsfcrud_even_row {
     left: 50%;
     top: 50%;
 }
+
+
+#top {
+    position: relative;
+    background-color: #3a4f54;
+    color: white;
+    padding: 5px;
+    margin: 0px 0px 10px 0px;
+}
+
+#bottom {
+    position: relative;
+    background-color: #c2dfef;
+    padding: 5px;
+    margin: 10px 0px 0px 0px;
+}
+
+#left {
+    float: left;
+    background-color: white;
+    padding: 5px;
+    width: 180px;
+}
+
+#right {
+    float: right;
+    background-color: #ece3a5;
+    padding: 5px;
+    width: 150px;
+}
+
+.center_content {
+    position: relative;
+    background-color: #dddddd;
+    padding: 5px;
+}
+
+.left_content {
+    background-color: white;
+    padding: 5px;
+    margin-left: 200px;
+}
+
+.right_content {
+    background-color: #dddddd;
+    padding: 5px;
+    margin: 0px 200px 0px 200px;
+}
+
+#top a:link, #top a:visited {
+  color: white;
+  font-weight : bold;
+  text-decoration: none;
+}
+
+#top a:link:hover, #top a:visited:hover  {
+  color: black;
+  font-weight : bold;
+  text-decoration : underline;
+}
+
+
